[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.10.0"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.1.3"
dnspython = "^2.2.1"
pymongo = "^4.2.0"
Werkzeug = "^2.2.1"
playsound = "^1.3.0"
gTTS = "^2.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"